--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@gitlab.hers.rs:allex_parsers/variablelengthhrfmixin.git"
+    "url": "git@github.com:allex-parsers/variablelengthhrfmixin.git"
   },
   "keywords": [
     "ecosystem:AllexJS",
